--- a/contactUS.html
+++ b/contactUS.html
@@ -25,9 +25,8 @@
             </dev>
             <dev id="info">
                 <ul  >
-                    <li>Email: <a href="mailto:22209227@student.ciu.edu.tr" style="color: black; font-family: 'Times New Roman', Times, serif;">22209227@student.ciu.edu.tr</a></li><br/>
-                   <ol><a href="mailto:22104864@student.ciu.edu.tr" style="color: black; font-family: 'Times New Roman', Times, serif;">22104864@student.ciu.edu.tr</a></ol>
-                    <!--<li>WhatsApp Number: <a href="tell:+234 806 586 5571"> +234 806 586 5571</a></li>
+                    <li>Email: <a href="mailto:22209227@student.ciu.edu.tr" style="color: black; font-family: 'Times New Roman', Times, serif;">salimwambai0@gmail.com</a></li><br/>
+                   <!--<li>WhatsApp Number: <a href="tell:+234 806 586 5571"> +234 806 586 5571</a></li>
                     -->
                    <!-- <br/><li> Phone Number: <a href="https://wa.me/+2348065865571?text=Hello" style="font-family: 'Times New Roman', Times, serif; color: black;">Send message on WhatsApp</a><br/></li>-->
                     <br/><li >Address: TRNC 94014</li>
